# rbAI

./: .env.production  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.do/: app.yaml
rbAI_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini
rbAI_backend/app/: main.py
rbAI_backend/app/api/endpoints/: activities.py  ai_generate.py  analytics.py  auth.py  chat.py  execution.py  sessions.py  telemetry.py
rbAI_backend/app/db/: __init__.py  database.py  models.py  rbai.db  rbai.db-shm  rbai.db-wal  schema.sql
rbAI_backend/app/services/ai_orchestrator/: README.md  activity_generator.py  firewall.py  policies.py  prompts.py
rbAI_backend/app/services/behavior_engine/: ces_calculator.py  data_fusion.py  metrics.py
rbAI_backend/app/services/execution/: base_executor.py  execution_client.py  execution_service.py  test_validator.py
rbAI_backend/app/services/execution/executors/: java_executor.py
rbAI_backend/db/: rbai.db
rbAI_backend/tests/integration/: conftest.py  test_multi_language_execution.py
rbAI_backend/tests/unit/: test_executor_factory.py  test_java_executor.py  test_python_executor.py  test_solution_class_execution.py  test_strip_user_main.py  test_user_main_detection.py
rbAI_execution_service/: .env.example  .gitignore  Dockerfile  README.md  executor.py  main.py  pyproject.toml  requirements.txt
rbAI_execution_service/executors/: __init__.py  java_executor.py  python_executor.py
rbAI_execution_service/validators/: __init__.py
(+93 files in other folders)
