[project]
name = "rbai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.1.2",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.2",
    "httpx>=0.27.0",  # HTTP client for execution microservice
    "openai>=1.12.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter for production
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
